Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sampleapp-ingress
spec:
  rules:
  - host: sampleapp1-82022847.ce-aa.kubepia.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: sampleapp-service
            port:
              number: 80
